assets/css/composantes/tool-card.css
.tool-card {
	display: flex;
	gap: var(--spacing-thinner);
	align-items: center;
	justify-items: center;
}

.tool-card + .tool-card {
	margin-top: var(--spacing-thin);
}

.tool-card > picture {
	display: block;
	box-sizing: border-box;

	flex-basis: 10ch;
	min-width: 10ch;

	img {
		width: 100%;
		height: 100%;
		object-fit: contain;
	}
}

.tool-card__content {
	flex-basis: 0;
	flex-grow: 4;

	display: flex;
	flex-direction: column;
	gap: var(--spacing-nano);

	align-items: start;
	justify-content: space-between;

	@media (min-width: 850px) {
		flex-direction: row;
		gap: var(--spacing-thinnest);
		align-items: center;
	}
}

.tool-card__title {
	font-family: var(--font-accent);
	font-size: var(--font-tall);
}

.tool-card [data-display="mobile"]{
	display: inline-block;
	font-size: var(--font-mini);
	margin-left: var(--spacing-thinner);
	color: var(--accent);

	@media screen and (min-width:768px) {
			display: none;
	}
}

.tool-card [data-display="desktop"]{
	display: none;

	@media screen and (min-width:768px) {
		display: inherit;
	}
}

